force-app/main/default/objects/EMI_Schedule__c/EMI_Schedule__c.object-meta.xml
<CustomObject>
    <description>Auto-generated monthly repayment schedule for disbursed loans. Contains EMI number, due date, principal and interest breakdowns, and payment status. Created in bulk by EMIGenerationBatch after disbursement.</description>
    <label>EMI Schedule</label>
    <nameField>
        <label>EMI Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EMI Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>