force-app/main/default/objects/EMI_Schedule__c/fields/Disbursement__c.field-meta.xml
<CustomField>
    <fullName>Disbursement__c</fullName>
    <label>Disbursement</label>
    <type>Lookup</type>
    <referenceTo>Disbursement__c</referenceTo>
    <relationshipLabel>EMI Schedules</relationshipLabel>
    <relationshipName>EMI_Schedules</relationshipName>
</CustomField>