force-app/main/default/objects/EMI_Schedule__c/fields/EMI_Number__c.field-meta.xml
<CustomField>
    <fullName>EMI_Number__c</fullName>
    <label>EMI Number</label>
    <required>true</required>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <description>Sequential EMI instalment number (1 = first month, N = last month). Used for amortisation schedule display and overdue detection.</description>
</CustomField>