force-app/main/default/objects/EMI_Schedule__c/fields/Loan_Application__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application__c</fullName>
    <label>Loan Application</label>
    <type>MasterDetail</type>
    <referenceTo>Loan_Application__c</referenceTo>
    <relationshipLabel>EMI Schedules</relationshipLabel>
    <relationshipName>EMI_Schedules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>