force-app/main/default/objects/EMI_Schedule__c/fields/Outstanding_Balance__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Balance__c</fullName>
    <label>Outstanding Balance</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <description>Remaining principal balance after this EMI is paid. Used for amortisation schedule display on the Customer Portal.</description>
</CustomField>