force-app/main/default/objects/EMI_Schedule__c/fields/Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Paid_Amount__c</fullName>
    <label>Paid Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <description>Actual amount received. May differ from EMI_Amount__c in cases of partial payment or late charges.</description>
</CustomField>