force-app/main/default/objects/EMI_Schedule__c/fields/Principal_Component__c.field-meta.xml
<CustomField>
    <fullName>Principal_Component__c</fullName>
    <label>Principal Component</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>