force-app/main/default/objects/EMI_Schedule__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Upcoming</fullName><default>true</default><label>Upcoming</label></value>
            <value><fullName>Due</fullName><default>false</default><label>Due</label></value>
            <value><fullName>Overdue</fullName><default>false</default><label>Overdue</label></value>
            <value><fullName>Paid</fullName><default>false</default><label>Paid</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>